# jams

./: Dockerfile  Makefile  README.md  go.mod  go.sum  main.py  pyproject.toml
artefacts/: alphamodel_regression_skpipeline.pkl  fancymodel_regression_xgboost.json  fancymodel_regression_xgboost_v1.json  gbmmodel_regression_lightgbm.txt  greatmodel_regression_skpipeline.pkl  mymodel_regression_catboost_v1.cbm  supermodel_regression_skpipeline_v1.pkl
client/: main.go
mldeploy/: main.py
mldeploy/api/: mldeploy_pb2.py  mldeploy_pb2_grpc.py  servicer.py
mldeploy/model_manager/: manager.py  utils.py
mldeploy/server/: server.py
pkg/pb/mldeploy/: mldeploy.pb.go  mldeploy_grpc.pb.go
pkg/pb/treeserve/: treeserve.pb.go  treeserve_grpc.pb.go
proto/mldeploy/v1/: mldeploy.proto
proto/treeserve/v1/: treeserve.proto
treeserve/: main.py
treeserve/api/: servicer.py  treeserve_pb2.py  treeserve_pb2.pyi  treeserve_pb2_grpc.py
treeserve/model_manager/: manager.py  utils.py
treeserve/server/: server.py
